<resources>
    <string name="app_name">MenuTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_lines_no_waiting">No lines. No waiting.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="the_easiest_way_to_order">The easiest way to order</string>
    <string name="logout">Logout</string>
    <string name="welcome_placeholder">Welcome to Poke Bar</string>
    <string name="poke_bar_placeholder">Poké Bar makes it easy to customize your bowl with endless toppings, proteins, mix-ins and more.</string>
    <string name="ocean_drive_placeholder">Ocean Drive Miami</string>
    <string name="distance_placeholder">230 m</string>
    <string name="address_placeholder">2 Belgard Road, Tallaght, Miami</string>
    <string name="date_placeholder">Today 09:00 - 22:00</string>
    <string name="place_placeholder">Ocean Drive Miami</string>
    <string name="login_fragment">LoginFragment</string>
    <string name="venue_list_fragment">VenueListFragment</string>
    <string name="venue_details_fragment">VenueDetailsFragment</string>
    <string name="currently_closed">CURRENTLY CLOSED</string>
    <string name="open">OPEN</string>
    <string name="wifi">wifi</string>
    <string name="mobile">mobile</string>
    <string name="connected">CONNECTED</string>
    <string name="connection_lost">CONNECTION LOST</string>
    <string name="please_input_email_and_password">Please input email and password</string>
</resources>
