<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/loginFragment"
    android:id="@+id/venue_navigation_graph">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.aleksandar.menutest.presentation.LoginFragment"
        android:label="@string/login_fragment"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_venueListFragment"
            app:destination="@id/venueListFragment" />
    </fragment>

    <fragment
        android:id="@+id/venueListFragment"
        android:name="com.aleksandar.menutest.presentation.VenueListFragment"
        android:label="@string/venue_list_fragment"
        tools:layout="@layout/fragment_venue_list" >
        <action
            android:id="@+id/action_venueListFragment_to_venueDetailsFragment"
            app:destination="@id/venueDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/venueDetailsFragment"
        android:name="com.aleksandar.menutest.presentation.VenueDetailsFragment"
        android:label="@string/venue_details_fragment"
        tools:layout="@layout/fragment_venue_details" >
        <action
            android:id="@+id/action_venueDetailsFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>

</navigation>
