<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="venue"
            type="com.aleksandar.menutest.data.model.VenueListApiResponse" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/dp_12"
        tools:context=".presentation.VenueDetailsFragment">

        <ImageView
            android:id="@+id/venueImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dp_180"
            android:background="@drawable/hero_image"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginEnd="@dimen/dp_20"
            android:background="@drawable/rounded_white_20"
            android:gravity="center"
            android:padding="@dimen/dp_12"
            android:text="@string/logout"
            android:textColor="@color/black_2c2c31"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/placeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/sp_17"
            android:text="@{venue.name}"
            android:textColor="@color/black_2c2c31"
            android:textSize="@dimen/sp_17"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/venueImg"
            tools:text="@string/ocean_drive_placeholder" />

        <TextView
            android:id="@+id/barTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@{venue.welcomeMessage}"
            android:textColor="@color/black_2c2c31"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toStartOf="@id/placeTxt"
            app:layout_constraintTop_toBottomOf="@id/placeTxt"
            tools:text="@string/welcome_placeholder" />

        <TextView
            android:id="@+id/descriptionTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@{venue.description}"
            android:textColor="@color/black_92C2C31"
            android:textSize="@dimen/sp_14"
            android:maxLines="3"
            android:ellipsize="end"
            app:layout_constraintStart_toStartOf="@id/placeTxt"
            app:layout_constraintTop_toBottomOf="@id/barTxt"
            tools:text="@string/poke_bar_placeholder" />

        <TextView
            android:id="@+id/isOpenTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@drawable/rounded_gray_8"
            android:padding="@dimen/dp_4"
            android:text="@{venue.isOpen? @string/open : @string/currently_closed}"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toStartOf="@id/placeTxt"
            app:layout_constraintTop_toBottomOf="@id/descriptionTxt"
            tools:text="@string/currently_closed" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
