<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="venue"
            type="com.aleksandar.menutest.data.model.VenueListApiResponse" />

        <variable
            name="iSelectedVenue"
            type="com.aleksandar.menutest.presentation.adapter.VenueListRVAdapter.ISelectedVenue" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="@{(view) -> iSelectedVenue.setSelectedVenue(venue)}"
        android:paddingStart="@dimen/dp_24"
        android:paddingTop="@dimen/dp_18"
        android:paddingEnd="@dimen/dp_24"
        android:paddingBottom="@dimen/dp_18">

        <TextView
            android:id="@+id/placeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{venue.name}"
            android:textColor="@color/black_2c2c31"
            android:textSize="@dimen/sp_17"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/place_placeholder" />

        <TextView
            android:id="@+id/distanceTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_2"
            android:text="@{venue.distance}"
            android:textColor="@color/black_2c2c31"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/placeTxt"
            tools:text="@string/distance_placeholder" />

        <TextView
            android:id="@+id/addressTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_2"
            android:text="@{venue.distance}"
            android:textColor="@color/black_92C2C31"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/distanceTxt"
            tools:text="@string/address_placeholder" />

        <TextView
            android:id="@+id/dateTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_2"
            android:text="@{venue.date}"
            android:textColor="@color/black_92C2C31"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addressTxt"
            tools:text="@string/date_placeholder" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_18"
            android:background="@color/gray_0F2C2C31"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dateTxt" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
